--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -1,7 +1,7 @@
 # database init, supports mysql too
 database=mysql
-# spring.datasource.url=jdbc:mysql://localhost/test
-# spring.datasource.username=root
-# spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://ppc30cco2ygzgp.c8niy6ycq7vo.us-east-2.rds.amazonaws.com:3306/PetClinicDB
+spring.datasource.username=PetDBAdmin
+spring.datasource.password=HeyYouGuys!
  # Uncomment this the first time the app runs
-# spring.datasource.initialize=true
+spring.datasource.initialize=true
