--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -4,4 +4,4 @@ spring.datasource.url=jdbc:mysql://ppc30cco2ygzgp.c8niy6ycq7vo.us-east-2.rds.ama
 spring.datasource.username=PetDBAdmin
 spring.datasource.password=HeyYouGuys!
  # Uncomment this the first time the app runs
-spring.datasource.initialize=true
+#spring.datasource.initialize=true
